--- a/DemoFollower/app/src/main/AndroidManifest.xml
+++ b/DemoFollower/app/src/main/AndroidManifest.xml
@@ -15,11 +15,18 @@
         android:theme="@style/Theme.DemoFollower"
         tools:targetApi="31">
         <activity
-            android:name=".ProductListActivity"
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewProfileActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false" />
+        <activity
+            android:name=".ProductListActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
